--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,20 +1,49 @@
 <section class="section hero">
   <div class="container hero__container">
-    <h1 class="hero__title">
-      ice cream made with
-      <span class="hero__subtitle">passion</span>
-    </h1>
-    <ul class="hero__ul">
-      <li class="hero__list">
-        <button type="button" class="button hero__button button--color__cherry">
-          Products
-        </button>
-      </li>
-      <li class="hero__list">
-        <button type="button" class="button hero__button button--color__white">
-          How it’s made?
-        </button>
-      </li>
-    </ul>
+    <div>
+      <h1 class="hero__title">
+        ice cream made with
+        <span class="hero__subtitle">passion</span>
+      </h1>
+      <ul class="hero__ul">
+        <li class="hero__list">
+          <button
+            type="button"
+            class="button hero__button button--color__cherry"
+          >
+            Products
+          </button>
+        </li>
+        <li class="hero__list">
+          <button
+            type="button"
+            class="button hero__button button--color__white"
+          >
+            How it’s made?
+          </button>
+        </li>
+      </ul>
+      <p class="hero__text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et
+      </p>
+      <button class="button hero__btn" type="button">
+        <svg class="icon btn--color__cherry" width="18" height="12">
+          <use href="./images/icons.svg#icon-arrow-products"></use>
+        </svg>
+      </button>
+    </div>
+    <div class="count__wrap">
+      <ul class="count__ul">
+        <li class="count__list">
+          <p class="count__number">16</p>
+          <p class="count__text">cafes</p>
+        </li>
+        <li class="count__list">
+          <p class="count__number">23</p>
+          <p class="count__text">food trucks</p>
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
