--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -9,7 +9,7 @@
         <li class="hero__list">
           <button
             type="button"
-            class="button hero__button button--color__cherry"
+            class="button hero__button button--color__cherry button--with-accent-hover"
           >
             Products
           </button>
@@ -17,7 +17,7 @@
         <li class="hero__list">
           <button
             type="button"
-            class="button hero__button button--color__white"
+            class="button hero__button button--color__white button--with-hover"
           >
             How it’s made?
           </button>
