--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -7,16 +7,16 @@
               <source
                 media="(max-width: 767px)"
                 srcset="
-                  /src/images/about/mobile/about-cow-mob-x1.png 1x,
-                  /src/images/about/mobile/about-cow-mob-x2.png 2x
+                  ./images/about/mobile/about-cow-mob-x1.png 1x,
+                  ./images/about/mobile/about-cow-mob-x2.png 2x
                 "
                 type="image/png"
               />
               <source
                 media="(min-width: 768px) and (max-width: 1199.98px)"
                 srcset="
-                  /src/images/about/tablet/about-cow-tab-x1.png 1x,
-                  /src/images/about/tablet/about-cow-tab-x2.png 2x
+                  ./images/about/tablet/about-cow-tab-x1.png 1x,
+                  ./images/about/tablet/about-cow-tab-x2.png 2x
                 "
                 type="image/png"
                 width="336"
@@ -25,15 +25,15 @@
               <source
                 media="(min-width: 1200px)"
                 srcset="
-                  /src/images/about/desktop/about-cow-des-x1.png 1x,
-                  /src/images/about/desktop/about-cow-des-x2.png 2x
+                  ./images/about/desktop/about-cow-des-x1.png 1x,
+                  ./images/about/desktop/about-cow-des-x2.png 2x
                 "
                 type="image/png"
                 width="501"
                 height="501"
               />
               <img class="about__cow"
-                src="/src/images/About/mobile/about-cow-mob-x1.png"
+                src="./images/about/mobile/about-cow-mob-x1.png"
                 alt="cow and jug of milk"
                 width="280"
                 height="279"
