--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -23,15 +23,17 @@
           </button>
         </li>
       </ul>
-      <p class="hero__text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et
-      </p>
-      <button class="button hero__btn" type="button">
-        <svg class="icon btn--color__cherry" width="18" height="12">
-          <use href="./images/icons.svg#icon-arrow-products"></use>
-        </svg>
-      </button>
+      <div class="hero__text--wrap">
+        <p class="hero__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et
+        </p>
+        <button class="button hero__btn" type="button">
+          <svg class="icon btn--color__cherry" width="18" height="12">
+            <use href="./images/icons.svg#icon-arrow-products"></use>
+          </svg>
+        </button>
+      </div>
     </div>
     <div class="count__wrap">
       <ul class="count__ul">
