--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
       width="199" height="50"/>
     </a>
 
-    <button class="header__menu-open-btn button js-open" 
+    <button class="header__menu-btn-open button js-open" 
       aria-label="Открыть мобильное меню"
       aria-expanded="true">
       <svg class="header__menu-btn-icon-open" width="20" height="12">
@@ -16,6 +16,12 @@
       </svg>
     </button>
 
+    <button class="header__tb-btn button button--with-hover" type="button">
+      <span class="header__tb-text">Buy now</span>
+      <svg class="header__tb-icon" width="15" height="20">
+        <use href="./images/icons.svg#icon-arrow-common"></use>
+      </svg>
+    </button>
 
     <div class="header__menu header__menu--js">
       <div class="header__menu-wrapper">
