--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,66 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ice Cream Group-28</title>
-</head>
-<body>
-
-
-
-
 <section class="section products">
   <div class="container">
+
     <p class="products__label">100% natural</p>
     <h2 class="products__title">products</h2>
-
-    <!-- Карточки товаров -->
 
     <ul class="products__list">
       <li class="card">
         <div class="card__wrapper card__wrapper--ice">
-          <!-- На него мороженку как псевдо -->
 
           <h3 class="products__subtitle">ice cream</h3>
-          <!-- На него точечки как псевдо -->
-
           <p class="products__text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et. dolore magna aliqua
             facilisis.
           </p>
 
-          <button type="button" class="products__button button">
-
+          <button type="button" class="products__button button button--with-hover">
             <svg class="icon button__arrow--products" width="18" height="12">
               <use href="./images/icons.svg#icon-arrow-products"></use>
             </svg>
-            
           </button>
         </div>
       </li>
 
       <li class="card">
         <div class="card__wrapper card__wrapper--coffee">
-          <!-- На него мороженку как псевдо -->
 
           <h3 class="products__subtitle">ice coffee</h3>
-          <!-- На него точечки как псевдо -->
-
           <p class="products__text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et. dolore magna aliqua
             facilisis.
           </p>
 
-          <button type="button" class="products__button button">
-
+          <button type="button" class="products__button button button--with-hover">
             <svg class="icon button__arrow--products" width="18" height="12">
               <use href="./images/icons.svg#icon-arrow-products"></use>
             </svg>
-
           </button>
         </div>
       </li>
@@ -69,36 +45,19 @@
         <div class="card__wrapper card__wrapper--shakes">
 
           <h3 class="products__subtitle">milkshakes</h3>
-          <!-- На него точечки как псевдо -->
-
           <p class="products__text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et. dolore magna aliqua
             facilisis.
           </p>
 
-          <button type="button" class="products__button button">
-
+          <button type="button" class="products__button button button--with-hover">
             <svg class="icon button__arrow--products" width="18" height="12">
               <use href="./images/icons.svg#icon-arrow-products"></use>
             </svg>
-
-
           </button>
         </div>
       </li>
     </ul>
   </div>
 </section>
-
-
-
-
-
-
-
-
-
-
-</body>
-</html>
