--- a/src/sass/products/_products.scss
+++ b/src/sass/products/_products.scss
@@ -2,39 +2,49 @@
     margin-bottom: 15px;
 
     text-align: center;
-    font-family: 'Titan One';
+    font-family: 'Titan One', 'cursive';
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
-    line-height: 21px;
+    line-height: 1.17;
     text-transform: uppercase;
     color: $secondary-title-color;
+    
+    @media screen and (min-width:$tablet) {
+        margin-bottom: 15px;
+        font-size: 26px;
+        line-height: 1.15; 
+    }
 }
 
 .products__title {
     margin-bottom: 8px;
 
-
     text-align: center;
     font-family: 'Titan One', 'cursive';
-    font-style: normal;
     font-weight: 400;
     font-size: 34px;
-    line-height: 39px;
+    line-height: 1.15;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $accent-color;
+
+    @media screen and (min-width:$tablet) {
+        margin-bottom: 20px;
+        font-size: 48px;
+    }
 }
 
 .products__subtitle {
     position: relative;
 
-
+    margin-bottom: 70px;
+    
     font-family: 'Titan One', 'cursive';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
-    line-height: 23px;
+    line-height: 1.15;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $primary-inverse-text-color;
@@ -43,13 +53,12 @@
 .products__text {
     margin-bottom: 32px;
 
-
     text-align: center;
+
     font-family: 'DM Sans';
     font-style: normal;
     font-weight: 700;
-    font-size: 14px;
-    line-height: 152%;
+    line-height: 1.79;
     letter-spacing: 0.04em;
     color: $primary-inverse-text-color;
 }
@@ -64,18 +73,30 @@
     height: 40px;
     border-radius: 50%;
     background-color: $primary-background-color;
-
 }
 
-/* Список карточек */
+
+            // Список карточек 
+
+.products__list {
+    @media screen and (min-width:$tablet) {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 16px;     
+    }
+}
 
 .card {
     padding-top: 140px;
+
+    @media screen and (min-width:$tablet) {
+        flex-basis: calc((100% - 32px) / 3);
+        padding-top: 138px;
+    }
 }
 
 .card__wrapper {
     position: relative;
-
 
     padding-top: 160px;
     padding-left: 40px;
@@ -83,8 +104,14 @@
     padding-bottom: 40px;
 
     border-radius: 24px; 
-    
     text-align: center;
+
+    @media screen and (min-width:$tablet) {
+        padding-top: 106px;    
+        padding-left: 32px;
+        padding-right: 32px;
+        padding-bottom: 32px;
+    }
 }
 
 .card__wrapper--ice {
@@ -99,7 +126,24 @@
     background-color: #C2E297;
 }
 
+            // Псевдоэлемент точки
 
+.products__subtitle::after {
+    content: '\22EF';
+    display: block;
+    font-size: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 32px;
+}
+
+            // Кнопка
+
+.button__arrow--products {
+    color: $accent-color;
+}
+
+            // Псевдоэлементы изображения
 
 .card__wrapper--ice::before {
     position: absolute;
@@ -108,11 +152,36 @@
     transform: translateX(-50%);
 
     content: '';
-   
-    background-image: url(../images/products/mobile/prod-cream-mob-x1.png);
-
+    display: block;
     width: 280px;
     height: 280px;
+    background-image: url(../images/products/mobile/prod-cream-mob-x1.png);
+    background-size: 280px 280px;
+    
+    @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+
+            .card__wrapper--ice::before {
+                background-image: url(../images/products/mobile/prod-cream-mob-x2.png);
+            }
+    }
+
+    @media screen and (min-width:$tablet) {
+        width: 224px;
+        height: 224px;
+        background-image: url(../images/products/tablet/prod-cream-tab-x1.png);
+        background-size: 224px 224px;
+
+        @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+        
+                .card__wrapper--ice::before {
+                    background-image: url(../images/products/tablet/prod-cream-tab-x2.png);
+                }
+            }
+    }
 }
 
 .card__wrapper--coffee::before {
@@ -122,11 +191,36 @@
     transform: translateX(-50%);
 
     content: '';
-
+    display: block;
     background-image: url(../images/products/mobile/prod-coffee-mob-x1.png);
-
+    background-size: 280px 280px;
     width: 280px;
     height: 280px;
+
+    @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+    
+                .card__wrapper--coffee::before {
+                background-image: url(../images/products/mobile/prod-coffee-mob-x2.png);
+            }
+        }
+
+    @media screen and (min-width:$tablet) {
+        width: 224px;
+        height: 224px;
+        background-image: url(../images/products/tablet/prod-coffee-tab-x1.png);
+        background-size: 224px 224px;
+        
+        @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+            
+                .card__wrapper--coffee::before {
+                        background-image: url(../images/products/tablet/prod-coffee-tab-x2.png);
+                    }
+                }
+        }
 }
 
 .card__wrapper--shakes::before {
@@ -136,47 +230,33 @@
     transform: translateX(-50%);
 
     content: '';
-
+    display: block;
     background-image: url(../images/products/mobile/prod-shakes-mob-x1.png);
-
+    background-size: 280px 280px;
     width: 280px;
     height: 280px;
-}
 
+    @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
 
-/*
-@media (min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx) {
-    .card__wrapper--shakes::before {
-        background-image: url(../images/products/mobile/prod-shakes-mob-x2.png);
+            .card__wrapper--shakes::before {
+                background-image: url(../images/products/mobile/prod-shakes-mob-x2.png);
+            }
     }
-}
-*/
+    @media screen and (min-width:$tablet) {
+        width: 224px;
+        height: 224px;
+        background-image: url(../images/products/tablet/prod-shakes-tab-x1.png);
+        background-size: 224px 224px;
 
-
-
-
-
-
-
-
-
-.products__subtitle::after {
-
-    content: '\22EF';
-
-    display: block;
-    
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 32px;
-    margin-bottom: 32px;
-
-    font-size: 40px;
-}
-
-
-.button__arrow--products {
-    color: $accent-color;
+        @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+        
+                .card__wrapper--shakes::before {
+                    background-image: url(../images/products/tablet/prod-shakes-tab-x2.png);
+                }
+            }
+    }
 }
