--- a/src/sass/reviews/_reviews.scss
+++ b/src/sass/reviews/_reviews.scss
@@ -2,9 +2,13 @@
 
 .swiper {
     width: 100%;
-    
 
+    @media screen and (min-width: $tablet) {
+           width: 80%;
+        }
 }
+
+
 
 .swiper-slide {
     text-align: center;
@@ -28,21 +32,113 @@
 // ФОТО АВАТАРА
 
 .thumb {
-    // на таблетку 150px
-    width: 120px;
-    height: 120px;
+    
+    width: 130px;
+    height: 130px;
     border-radius: 50%;
     margin-bottom: 32px;
     overflow: hidden;
-    box-shadow: rgb(5, 244, 113) 0px 20px 30px -10px;
+    box-shadow: rgb(82, 211, 216) 0px 20px 30px -10px;
+
+    @media screen and (min-width: $tablet) {
+            width: 170px;
+            height: 170px;
+        }
+
+    @media screen and (min-width: $desktop) {
+            width: 220px;
+            height: 220px;
+        }
 }
 
-.thumb__img {
+.thumb__avatar{
     width: 100%;
     height: auto;
     object-fit: contain;
     object-position: center;
     
+}
+// Текс відгуків
+.swiper-slide__content {
+    position: relative;
+    background: #FAFAFA;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 43px;
+    padding-bottom: 17px;
+
+    margin-bottom: 36px;
+
+}
+
+
+.swiper-slide__content::after {
+
+    content: '\22EF';
+    position: absolute;
+    bottom: 16px;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 0;
+
+    color: #C7133E;
+    font-size: 40px;
+}
+
+
+.swiper-slide__content::before {
+    content: ' ';
+    position: absolute;
+    top: 30px;
+    left: 53px;
+    z-index: 1;
+    background-image: url(../images/customer-reviews/mobile/cust-quotes-mob-x1.png);
+    width: 54px;
+    height: 40px;
+
+
+}
+.swiper-slide__thumb {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    width: 100%;
+    background-image: repeating-linear-gradient(to bottom,
+            transparent 0 30px,
+            #E1E1E1 30px 31px);
+
+
+}
+
+
+
+.swiper-slide__text {
+    flex-basis: 87%;
+
+    z-index: 2;
+
+    font-size: 12px;
+    line-height: 2.58;
+    text-align: center;
+
+
+}
+
+
+.swiper-slide__subtitle {
+
+    line-height: 1.86;
+    text-align: center;
+    margin-bottom: 56px;
+
+    @media screen and (min-width: $tablet) {
+        margin-bottom: 88px;
+    }
+
+    @media screen and (min-width: $desktop) {
+
+        margin-bottom: 86px;
+    }
 }
 
 // зміна значків падінейшин початок
@@ -56,6 +152,16 @@
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 50%;
+
+    @media screen and (min-width: $tablet) {
+            width: 40px;
+            height: 40px;
+        }
+    
+        @media screen and (min-width: $desktop) {
+            width: 50px;
+            height: 50px;
+        }
 
 
 }
@@ -80,14 +186,25 @@
 
     background-image: url(../images/customer-reviews/reviews/bgi-lavr.png);
 }
+.swiper-pagination-bullet:nth-child(5) {
+
+    background-image: url(../images/customer-reviews/reviews/bgi-anton.png);
+}
+.swiper-pagination-bullet:nth-child(6) {
+
+    background-image: url(../images/customer-reviews/reviews/bgi-hamala.png);
+}
+.swiper-pagination-bullet:nth-child(7) {
+
+    background-image: url(../images/customer-reviews/reviews/bgi-oleg.png);
+}
 
 
 
 .swiper-pagination-bullet-active {
     background-color: transparent;
-     // background-image: url(../image/home.svg);
     display: inline-flex;
-    // на таблетку 70рх
+    
     height: 50px;
     width: 50px;
     border-radius: 50%;
@@ -95,93 +212,61 @@
     background-position: center;
     background-repeat: no-repeat;
     opacity: 1;
+
+    @media screen and (min-width: $tablet) {
+            width: 80px;
+            height: 80px;
+        }
+    
+        @media screen and (min-width: $desktop) {
+            width: 100px;
+            height: 100px;
+        }
     
 
 }
+
 .swiper-pagination-bullet-active:nth-child(3n + 1){
     box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px;
 
 }
+
 .swiper-pagination-bullet-active:nth-child(3n+2){
     box-shadow: rgba(240, 146, 20, 0.4) 5px 5px, rgba(240, 146, 20, 0.3) 10px 10px, rgba(240, 146, 20, 0.2) 15px 15px, rgba(240, 146, 20, 0.1) 20px 20px;
 }
+
 .swiper-pagination-bullet-active:nth-child(3n+3) {
-    box-shadow: rgba(54, 238, 63, 0.4) 5px 5px, rgba(54, 238, 63, 0.3) 10px 10px, rgba(54, 238, 63, 0.2) 15px 15px, rgba(54, 238, 63, 0.1) 20px 20px;
+    box-shadow: rgba(79, 236, 144, 0.4) 5px 5px, rgba(79, 236, 144, 0.3) 10px 10px, rgba(79, 236, 144, 0.2) 15px 15px, rgba(79, 236, 144, 0.1) 20px 20px;
 }
 
 
-
-.swiper-slide__content {
-    position: relative;
-    background: #FAFAFA;
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-top: 43px;
-    padding-bottom: 17px;
-
-    margin-bottom: 36px;
-    
-}
-.swiper-slide__subtitle {
-    position: relative;
+// Анімація
+.rotate-hor-center:hover {
+    animation: rotate-hor-center 0.5s cubic-bezier(0.785, 0.135, 0.150, 0.860) both;
 }
 
-.swiper-slide__content::after {
+@keyframes rotate-hor-center {
+    0% {
+        transform: rotateX(0);
+    }
 
-    content: '\22EF';
-    position: absolute;
-    bottom: 16px;
-    left: 50%;
-    transform: translateX(-50%);
-    height: 0;
-
-    color: #C7133E;
-    font-size: 40px;
+    100% {
+        transform: rotateX(-360deg);
+    }
 }
 
-
-.swiper-slide__content::before {
-    content: ' ';
-    position: absolute;
-    top: 30px;
-    left: 53px;
-    z-index: 1;
-    background-image: url(../images/customer-reviews/mobile/cust-quotes-mob-x1.png);
-    width:54px;
-    height:40px;
-
-    
+.swiper-pagination-bullet-active{
+    animation: tilt-in-br 0.65s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
+@keyframes tilt-in-br {
+    0% {
+        transform: rotateY(-35deg) rotateX(-20deg) translate(250px, 250px) skew(12deg, 15deg);
+        opacity: 0;
+    }
 
-
-.swiper-slide__text {
-    flex-basis: 87%;
-    
-    z-index: 2;
-
-    font-size: 12px;
-    line-height: 2.58;
-    text-align: center;
-
-
-}
-
-.swiper-slide__thumb {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    width: 100%;
-    background-image: repeating-linear-gradient(to bottom,
-            transparent 0 30px,
-            #E1E1E1 30px 31px);
-
-    // border-bottom: 1px solid #E1E1E1;
-}
-
-.swiper-slide__subtitle {
-
-    line-height: 1.86;
-    text-align: center;
-    margin-bottom: 56px;
+    100% {
+        transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+        opacity: 1;
+    }
 }
