--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2 hidden>Reviews</h2>
     <article class="article">
-      <h1 hidden>Customer Reviews</h1>
+      <h2 hidden>Customer Reviews</h2>
 
       <div class="swiper customerreviews">
         <div class="swiper-wrapper">
@@ -15,7 +15,7 @@
                   ./images/customer-reviews/reviews/photo-jul-2x.jpg 2x
                 "
                 src="./images/customer-reviews/reviews/photo-jul.jpg"
-                alt="Juliia"
+                alt="Juliia Kapuza"
                 width="150"
                 height="150"
               />
