--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -28,8 +28,12 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et
         </p>
-        <button class="button hero__btn" type="button">
-          <svg class="icon btn--color__cherry" width="18" height="12">
+        <button class="button hero__text-button" type="button">
+          <svg
+            class="icon hero__text-button--color__cherry"
+            width="18"
+            height="12"
+          >
             <use href="./images/icons.svg#icon-arrow-products"></use>
           </svg>
         </button>
