--- a/src/sass/about/_about.scss
+++ b/src/sass/about/_about.scss
@@ -155,6 +155,11 @@
     left: 0;
   }
 }
+@media screen and (min-width: 550px) and (max-width: 767px) {
+  .about__text--color:before {
+    top: -80px;
+  }
+}
 @media screen and (max-width: 767.98px) and (min-device-pixel-ratio: 2),
   screen and (max-width: 767.98px) and (min-resolution: 192dpi),
   screen and (max-width: 767.98px) and (min-resolution: 2x) {
