--- a/src/sass/header/_page-header.scss
+++ b/src/sass/header/_page-header.scss
@@ -27,11 +27,16 @@
 
 .header__logo-link {
     display: block;
+
+    transition: transform 100ms;
+
+    &:hover,
+    &:focus {
+        transform: scale(1.2);
+    }
 }
 
 .header__menu {
-    display: none;
-   
     position: fixed;
     right: 0;
     top: 0;
@@ -39,42 +44,38 @@
     height: 100%;
     
     background-color: #E17992;
-   
-
     
+    transform: translateX(200%);
+    transition: transform 1000ms;
 
     @media screen and (min-width: 768px) {
-        width: 70%;
+        width: 38%;
     }
 
     @media screen and (min-width: 1200px) {
+        width: 100%;
         position: relative;
         display: flex;
         background-color: transparent;
         align-items: center;
+        transform: none;
+        transform: translateX(0);
+        transition: transform 1ms;
     }
 }
 
 .is-open {
     @media screen and (max-width: 1199px) {
         display: flex;
-    
-
+        transition: transform 1000ms;
+        transform: translateX(0)
     }
 }
-
-.header__menu.is-open {
-
-  }
-
-
 
 .header__menu-wrapper{
     width: 100%;
 
-    margin: 0 auto;
-
-   
+    margin: 0 auto;  
 
     @media screen and (min-width: 1200px) {
         display: flex;
@@ -92,6 +93,13 @@
 
     background-color: transparent;
 
+    transition: transform 100ms;
+
+    &:hover,
+    &:focus {
+        transform: scale(1.2);
+    }
+
     @media screen and (min-width: 1200px) {
         display: none;
     }
@@ -100,10 +108,11 @@
 .header__menu-close-btn-icon {
     display: block;
     fill: #ffffff;
-}
 
-.header__menu-close-btn-icon:hover {
-    fill: $accent-color;
+    &:hover,
+    &:focus {
+        fill: $accent-color;
+    }
 }
 
 
@@ -118,10 +127,22 @@
     }
 }
 
+.header__nav-item {
+    @media screen and (max-width: 1199px) {
+        border-top: 1px solid #E18298;
+    }
+}
+
+.header__nav-item:last-child {
+    @media screen and (max-width: 1199px) {
+        border-bottom: 1px solid #E18298;
+    }
+}
+
 .header__nav-item:not(:last-child) {
+
     @media screen and (min-width: 1200px) {
         margin-right: 35px;
-        
     }
 }
 
@@ -133,13 +154,22 @@
     color: #ffffff;
     padding: 12px 0 12px 20px;
 
-    border-top: 1px solid #E18298;
-    border-bottom: 1px solid #E18298;
+    transition: transform 100ms;
+
+    &:hover,
+    &:focus {
+        transform: scale(1.02);
+    }
 
     @media screen and (min-width: 1200px) {
         display: inline-block;
         border: 0;
         padding: 0;
+
+        &:hover,
+        &:focus {
+        transform: scale(1.2);
+        }        
     }
 }
 
@@ -231,6 +261,13 @@
 
     background-color: transparent;
 
+    transition: transform 100ms;
+
+    &:hover,
+    &:focus {
+        transform: scale(1.2);
+    }
+
     @media screen and (min-width: 768px){
         margin-right: 32px;
         margin-left: auto;
@@ -245,7 +282,8 @@
 .header__menu-btn-icon-open {
     fill: $accent-color;
 
-    &:hover {
+    &:hover,
+    &:focus {
         fill: #ffffff;
     }
 }
