--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -42,7 +42,7 @@
         <nav class="header__nav">
           <ul class="header__nav-list">
             <li class="header__nav-item">
-              <a class="link header__nav-link header-scroll-current" href="">Home</a>
+              <a class="link header__nav-link" href="">Home</a>
             </li>
             <li class="header__nav-item">
               <a class="header__nav-link link" href="">About us</a>
@@ -61,46 +61,4 @@
       </div>
     </div>
   </div>
-
-<!--<div class="backdrop-mob is-hidden">
-    <div class="mob-menu">
-      <div class="mob-menu__wrapper">
-        <h2 class="visually-hidden">Mobile menu</h2>
-
-        <button class="mob-menu__close-btn button" type="button">
-          <svg class="mob-menu__close-icon" width="14" height="14">
-            <use href="./images/icons.svg#icon-close"></use>
-          </svg>
-        </button>
-
-        <button class="mob-menu__buy-btn button button--with-hover">
-          <span class="mob-menu__buy-text">Buy now</span>
-          <span>
-            <svg class="mob-menu__buy-icon" width="15" height="20">
-              <use href="./images/icons.svg#icon-arrow-common"></use>
-            </svg>
-          </span>
-        </button>
-
-        <ul class="mob-menu__list list">
-          <li class="mob-menu__item">
-            <a class="mob-menu__link" href="">Home</a>
-          </li>
-          <li class="mob-menu__item">
-            <a class="mob-menu__link" href="">About us</a>
-          </li>
-          <li class="mob-menu__item">
-            <a class="mob-menu__link" href="">How it's made?</a>
-          </li>
-          <li class="mob-menu__item">
-            <a class="mob-menu__link" href="">Our products</a>
-          </li>
-          <li class="mob-menu__item">
-            <a class="mob-menu__link" href="">Contacts</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>-->
-  
 </header>
