Добавляет стили для дескопа

--- a/src/sass/products/_products.scss
+++ b/src/sass/products/_products.scss
@@ -1,6 +1,5 @@
 .products__label {
     margin-bottom: 15px;
-
     text-align: center;
     font-family: 'Titan One', 'cursive';
     font-style: normal;
@@ -11,9 +10,15 @@
     color: $secondary-title-color;
     
     @media screen and (min-width:$tablet) {
-        margin-bottom: 15px;
+        margin-bottom: 18px;
         font-size: 26px;
         line-height: 1.15; 
+    }
+    @media screen and (min-width:$desktop) {
+        margin-bottom: 16px;
+        font-size: 30px;
+        line-height: 1.13;
+        letter-spacing: 0.04em;
     }
 }
 
@@ -33,6 +38,11 @@
         margin-bottom: 20px;
         font-size: 48px;
     }
+    @media screen and (min-width:$desktop) {
+        font-size: 58px;
+        line-height: 1.14;
+        letter-spacing: 0.06em;
+    }
 }
 
 .products__subtitle {
@@ -48,19 +58,35 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $primary-inverse-text-color;
+
+    @media screen and (min-width:$desktop) {
+        font-size: 30px;
+        line-height: 1.13;
+    }
 }
 
 .products__text {
     margin-bottom: 32px;
 
     text-align: center;
-
     font-family: 'DM Sans';
     font-style: normal;
     font-weight: 700;
     line-height: 1.79;
     letter-spacing: 0.04em;
     color: $primary-inverse-text-color;
+
+    @media screen and (min-width:$desktop) {
+            margin-bottom: 60px;
+            font-size: 16px;
+            line-height: 1.75;
+        }
+}
+
+            // Кнопка
+
+.button__arrow--products {
+    color: $accent-color;
 }
 
 .products__button {
@@ -75,6 +101,19 @@
     background-color: $primary-background-color;
 }
 
+            // Псевдоэлемент точки
+
+.products__subtitle::after {
+    content: '\22EF';
+    display: block;
+    font-size: 40px;
+
+    position: absolute;
+    top: 32px;
+    left: 50%;
+    transform: translate(-50%);
+}
+
 
             // Список карточек 
 
@@ -84,6 +123,10 @@
         flex-wrap: wrap;
         gap: 16px;     
     }
+
+    @media screen and (min-width:$desktop) {
+        gap: 32px;
+    }
 }
 
 .card {
@@ -92,6 +135,11 @@
     @media screen and (min-width:$tablet) {
         flex-basis: calc((100% - 32px) / 3);
         padding-top: 138px;
+    }
+
+    @media screen and (min-width:$desktop) {
+        flex-basis: calc((100% - 64px) / 3);
+        padding-top: 261px;
     }
 }
 
@@ -107,10 +155,17 @@
     text-align: center;
 
     @media screen and (min-width:$tablet) {
-        padding-top: 106px;    
+        padding-top: 118px;    
         padding-left: 32px;
         padding-right: 32px;
         padding-bottom: 32px;
+    }
+
+    @media screen and (min-width:$desktop) {
+        padding-top: 165px;
+        padding-left: 60px;
+        padding-right: 60px;
+        padding-bottom: 60px;
     }
 }
 
@@ -125,23 +180,7 @@
 .card__wrapper--shakes {
     background-color: #C2E297;
 }
-
-            // Псевдоэлемент точки
-
-.products__subtitle::after {
-    content: '\22EF';
-    display: block;
-    font-size: 40px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 32px;
-}
-
-            // Кнопка
-
-.button__arrow--products {
-    color: $accent-color;
-}
+   
 
             // Псевдоэлементы изображения
 
@@ -168,6 +207,7 @@
     }
 
     @media screen and (min-width:$tablet) {
+        top: -138px;
         width: 224px;
         height: 224px;
         background-image: url(../images/products/tablet/prod-cream-tab-x1.png);
@@ -181,6 +221,22 @@
                     background-image: url(../images/products/tablet/prod-cream-tab-x2.png);
                 }
             }
+    }
+
+    @media screen and (min-width:$desktop) {
+        top: -261px;
+        width: 368px;
+        height: 394px;
+        background-image: url(../images/products/desktop/prod-cream-des-x1.png);
+        background-size: 368px 394px;
+
+        @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                .card__wrapper--ice::before {
+                    background-image: url(../images/products/desktop/prod-cream-des-x2.png);
+                }
+        }
     }
 }
 
@@ -207,6 +263,7 @@
         }
 
     @media screen and (min-width:$tablet) {
+        top: -138px;
         width: 224px;
         height: 224px;
         background-image: url(../images/products/tablet/prod-coffee-tab-x1.png);
@@ -219,8 +276,24 @@
                 .card__wrapper--coffee::before {
                         background-image: url(../images/products/tablet/prod-coffee-tab-x2.png);
                     }
-                }
+            }
+    }
+
+    @media screen and (min-width:$desktop) {
+        top: -261px;
+        width: 368px;
+        height: 394px;
+        background-image: url(../images/products/desktop/prod-coffee-des-x1.png);
+        background-size: 368px 394px;
+
+        @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                .card__wrapper--coffee::before {
+                    background-image: url(../images/products/desktop/prod-coffee-des-x2.png);
+            }
         }
+    }
 }
 
 .card__wrapper--shakes::before {
@@ -256,6 +329,22 @@
         
                 .card__wrapper--shakes::before {
                     background-image: url(../images/products/tablet/prod-shakes-tab-x2.png);
+                }
+        }
+    }
+
+    @media screen and (min-width:$desktop) {
+        top: -261px;
+        width: 368px;
+        height: 394px;
+        background-image: url(../images/products/desktop/prod-shakes-des-x1.png);
+        background-size: 368px 394px;
+    
+        @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                .card__wrapper--shakes::before {
+                    background-image: url(../images/products/desktop/prod-shakes-des-x2.png);
                 }
             }
     }
