--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -80,18 +80,18 @@
       </li>
     </ul>
   <!--кнопки для локации отделений-->
-    <ul class="contacts__modal-btn">
-      <li>
+    <ul class="contacts__btn-list">
+      <li class="contacts__btn">
         <button class="button button--with-hover">
-          Our Locations
+          <span class="contacts__btn-text">Our Locations</span>
           <svg class="contacts__icon" width="8" height="10">
             <use href="./images/icons.svg#icon-header-arrow-btn"></use>
           </svg>
         </button>
       </li>
-      <li>
+      <li class="contacts__btn">
         <button class="button button--with-hover">
-          Franchise
+          <span class="contacts__btn-text">Franchise</span>
           <svg class="contacts__icon" width="8" height="10">
             <use href="./images/icons.svg#icon-header-arrow-btn"></use>
           </svg>
